--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>SITO DE CAFE</title>
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <a href="./index.html" class="nav-Logo">
+            <a href="#" class="nav-Logo">
                 <h2 class="nav-text">☕ Coffee</h2>
             </a>
             <input type="checkbox" id="menu-toggle" class="menu-toggle">
@@ -50,7 +50,7 @@
                     </h3>
                     <p class="description">
                          Bienvenido a nuestro paraiso del café, donde cada
-                         grano cuenta una historia y cada taza despierta aegría.
+                         grano cuenta una historia y cada taza despierta aegría
                     </p>
                     <div class="buttons">
                         <a href="./menu.html" class="button order-now">Ordenar Ahora</a>
@@ -67,4 +67,4 @@
         </section>
     </main>
 </body>
-</html> 
+</html>
